--- a/ProjetoCSS3/siteanabella/css/style.css
+++ b/ProjetoCSS3/siteanabella/css/style.css
@@ -1,4 +1,3 @@
-
 body {
     background: #ecec8f;
     font-family: Arial, Helvetica, sans-serif;
@@ -7,19 +6,34 @@ body {
 }
 
 #principal {
-    width: 85%;
+    width: 900px;
     align-items: center;
 }
 
 #menu {
-  
     background: #c2c274;
     padding: 2%;
 }
 
+#conteudo {
+
+    background: #ffffbd;
+    font-size: 12px;
+    padding: 10px;
+}
+
+#rodape {   
+    text-align: center;
+}
+
 a {
-   color: rgba(10, 10, 145, 0.568); 
-   text-decoration: none;
-   text-align: center;
-   padding: 1%;
+    color: rgba(10, 10, 145, 0.568);
+    text-decoration: none;
+    text-align: center;
+    padding: 1%;
+}
+
+h1 {
+    color: #828271;
+    font-size: 1.2em;
 }
